[tool.poetry]
name = "hello-grafana"
version = "0.1.0"
description = ""
authors = ["akihisa1210 <19635263+akihisa1210@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = "^1.17.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
